@@ -1,5 +1,10 @@
 2009-07-27  Marek Safar  <marek.safar@gmail.com>
 
+	* typemanager.cs, argument.cs, convert.cs, assign.cs, expression.cs,
+	ecore.cs: Add TypeManager.IsDynamicType.
+
+2009-07-27  Marek Safar  <marek.safar@gmail.com>
+
 	A fix for bug #415375
 	* expression.cs: Fixed object and reference type parameter
 	comparison.
